--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Deploy Resource Group rg-github-action with az cli
         uses: Azure/cli@v1
         with: 
-          inilinescript: |
-            az deployment sub create --template-file ./arm-templates/resourcegroup.json
+          inlineScript: |
+            az deployment sub create --location "west europe" --template-file ./arm-templates/resourcegroup.json
 
            
