--- a/.github/workflows/armtemplatedeploy.yml
+++ b/.github/workflows/armtemplatedeploy.yml
@@ -36,6 +36,7 @@ jobs:
             
       - name: Deploy Storage Account
         uses: azure/arm-deploy@v1
+        id: storageAccountDeploy
         with:
            subscriptionId: 3147637b-0fe6-4369-b7c1-a6bee6eea31a
            template: ./arm-templates/storageaccount.json
@@ -45,5 +46,7 @@ jobs:
            parameters: 
             ./arm-templates/storageaccount.parameters.json
             storageAccountName=globalstg002
+
+      - run : echo ${{ steps.storageAccountDeploy.outputs.BlobUri }}
 
 
